--- a/workflow.yaml
+++ b/workflow.yaml
@@ -2,6 +2,7 @@
 
 permissions:
   - '*'
+
 sessions:
   session:
     useTLS: false
@@ -67,7 +68,7 @@ jobs:
         early-cancel: any-job-failed
         env:
           host: localhost
-          port: 8080
+          port: "8080"
         retry:
           interval: 3s
           max-retries: 1000
