--- a/workflow.yaml
+++ b/workflow.yaml
@@ -78,6 +78,6 @@ jobs:
         uses: parallelworks/update-session
         with:
           remotePort: 8080
-          name: 'status'
+          name: ${{ sessions.session }}
           status: 'running'
           target: 'user-workspace'
