--- a/workflow.yaml
+++ b/workflow.yaml
@@ -38,6 +38,7 @@ jobs:
         run: |
           set -e
           export APP_DIR="$(eval echo $APP_DIR)"
+          echo "$APP_DIR"
           cd "$APP_DIR"
           if [ -d "$APP_DIR/.git" ]; then
             echo "Repo exists; fetching latest for $REPO_REF ..."
@@ -58,6 +59,7 @@ jobs:
         run: |
           set -e
           export APP_DIR="$(eval echo $APP_DIR)"
+          echo "$APP_DIR"
           cd "$APP_DIR"
           # install deps and start
           ./run_dashboard.sh
@@ -79,6 +81,6 @@ jobs:
         uses: parallelworks/update-session
         with:
           remotePort: 8080
-          name: 'status'
+          name: ${{ sessions.session }}
           status: 'running'
           target: 'user-workspace'
