Adding slug to yaml

--- a/workflow.yaml
+++ b/workflow.yaml
@@ -40,3 +40,4 @@ jobs:
           name: ${{ sessions.session }}
           status: 'running'
           target: 'user-workspace'
+          slug: "/"
