Refactor project structure and add comprehensive documentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,61 @@
-__pycache__
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Generated data (use ~/.hpc_status for persistent data)
 public/data/status.json
-system_markdown
-cluster_usage.json
+public/data/cluster_usage.json
+system_markdown/
+*.db
+
+# Logs
+*.log
+logs/
+
+# Environment
+.env
+.env.local
+
+# uv
+uv.lock
+
+# OS
+.DS_Store
+Thumbs.db
