--- a/configs/config.noaa.yaml
+++ b/configs/config.noaa.yaml
@@ -20,6 +20,7 @@ collectors:
     refresh_interval: 3600  # Docs change infrequently
 
 ui:
+  title: "RDHPCS Status Monitor"
   home_page: "overview"
   default_theme: "dark"
   tabs:
